[project]
name = "stableguard"
version = "0.0.0"
description = "StableGuard is an AI detection tool used to identify AI-generated images and videos."
requires-python = ">=3.12"
dependencies = [
      "torch>=2.5.1",
      "torchvision>=0.20.1",
      "torchaudio>=2.5.1",
      "safetensors>=0.5",
      "opencv-python>=4.11.0.86",
      "pillow>=11.1.0",
      "scikit-learn>=1.6.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "platform_system == 'Windows'" },
  { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "platform_system == 'Windows'" },
    { index = "pytorch-cu126", marker = "platform_system == 'Linux'" },
    ]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
